--- a/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
+++ b/BSiNS/Src/scr_XMLNabavniNalog.fx.yaml
@@ -7,11 +7,11 @@
         Reset(nabavniNalogReadyForNavCheckbox);
         UpdateContext({scannedItem: Blank()});
         If(!IsBlank(SelectedFile),
-            IfError(GetXML_Nabavni_Nalog_Novi.Run(SelectedFile, SelectedFolder),
+            IfError(GetXml.Run(SelectedFile, SelectedFolder),
                 Notify("Error occurred while Get request, check if file exists.",NotificationType.Error,5000),
-                UpdateContext({purchase: GetXML_Nabavni_Nalog_Novi.Run(SelectedFile, SelectedFolder)})
+                UpdateContext({purchase: ParseJSON(GetXml.Run(SelectedFile, SelectedFolder).response)})
             );
-        
+        /*
             UpdateContext({purchase_line: purchase.purchase_line});
             UpdateContext({purchase_res_entry: purchase.res_entry});
             UpdateContext({purchase_header: ParseJSON(purchase.purchase_header)});
@@ -83,7 +83,7 @@
                             )
                         }
                     )
-                );
+                );*/
         );
         
         Set(isLoading, false);
