--- a/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaPrenos.fx.yaml
@@ -7,27 +7,19 @@
             true
         );
         Reset(nalogZaPrenosReadyForNavCheckbox);
-        If(
-            !IsBlank(SelectedFile),
-            IfError(
-                GetXML_Nalog_Za_Prenos.Run(
-                    SelectedFile,
-                    SelectedFolder
-                ),
-                Notify(
-                    "Error occurred while Get request, check if file exists.",
-                    NotificationType.Error,
-                    5000
-                ),
+        If(!IsBlank(SelectedFile),
+            IfError(GetXml.Run(SelectedFile, SelectedFolder), Notify("Error occurred while Get request, check if file exists", NotificationType.Error, 5000),
                 UpdateContext(
                     {
-                        transfer: GetXML_Nalog_Za_Prenos.Run(
+                        transfer: ParseJSON(GetXml.Run(
                             SelectedFile,
                             SelectedFolder
-                        )
+                        ).response)
                     }
                 )
             );
+        
+            /*
             UpdateContext({transfer_header: ParseJSON(transfer.transfer_header)});
             UpdateContext({transfer_lines: transfer.transfer_line});
             UpdateContext({transfer_res_entry: transfer.res_entry});
