--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -6,6 +6,18 @@
         
         Reset(temeljniceInventureReadyForNavCheckbox);
         
+        UpdateContext(
+            {
+                xmlData: (ParseJSON(
+                    GetXml.Run(
+                        SelectedFile,
+                        SelectedFolder
+                    ).response).Lines
+                )
+            }
+        );
+        
+        /*
         If(!IsBlank(SelectedFile),
             IfError(GetXML_Temeljnice_Inventure.Run(SelectedFile, SelectedFolder),Notify("Error occurred while Get request, check if file exists.",NotificationType.Error,5000),UpdateContext({temeljniceResponse: GetXML_Temeljnice_Inventure.Run(SelectedFile, SelectedFolder)}));
         
@@ -45,7 +57,7 @@
                     }
                 )
             );
-        );
+        );*/
         
         Set(isLoading, false);
         UpdateContext({wizardStep:1});
