--- a/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
+++ b/BSiNS/Src/scr_XMLOtpremnice.fx.yaml
@@ -229,6 +229,9 @@
         );
         
         Set(isLoading, false);
+        
+        If(SelectedFolder = "ReadyForProcessing", ChangeXmlStatus.Run(SelectedFile, SelectedFolder));
+        
         UpdateContext({wizardStep:1});
 
     OtpremniceScreenContainer As groupContainer.verticalAutoLayoutContainer:
