--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -115,6 +115,9 @@
         );*/
         
         Set(isLoading, false);
+        
+        If(SelectedFolder = "ReadyForProcessing", ChangeXmlStatus.Run(SelectedFile, SelectedFolder));
+        
         UpdateContext({wizardStep:1});
 
     NalogZaProdajuScreenContainer As groupContainer.verticalAutoLayoutContainer:
