--- a/BSiNS/Src/scr_XMLPrimke.fx.yaml
+++ b/BSiNS/Src/scr_XMLPrimke.fx.yaml
@@ -92,6 +92,9 @@
         );*/
         
         Set(isLoading, false);
+        
+        If(SelectedFolder = "ReadyForProcessing", ChangeXmlStatus.Run(SelectedFile, SelectedFolder));
+        
         UpdateContext({wizardStep:1});
 
     PrimkeScreenContainer As groupContainer.verticalAutoLayoutContainer:
