--- a/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
+++ b/BSiNS/Src/scr_XMLTemeljniceInventure.fx.yaml
@@ -61,7 +61,7 @@
         
         Set(isLoading, false);
         
-        If(SelectedFolder = "ReadyForProcessing", ChangeXmlStatus.Run(SelectedFile, SelectedFolder));
+        If(SelectedFolder = "ReadyForProcessing", ChangeXmlStatus.Run(SelectedFile, SelectedFolder, "InProgress"));
         
         UpdateContext({wizardStep:1});
         
