--- a/BSiNS/Src/scr_XMLPrimke.fx.yaml
+++ b/BSiNS/Src/scr_XMLPrimke.fx.yaml
@@ -93,7 +93,7 @@
         
         Set(isLoading, false);
         
-        If(SelectedFolder = "ReadyForProcessing", ChangeXmlStatus.Run(SelectedFile, SelectedFolder, "InProgress"));
+        If(SelectedFolder = ReadyForProcessing, ChangeXmlStatus.Run(SelectedFile, SelectedFolder, InProgress));
         
         UpdateContext({wizardStep:1});
 
