--- a/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
+++ b/BSiNS/Src/scr_XMLNalogZaProdaju.fx.yaml
@@ -116,8 +116,7 @@
         
         Set(isLoading, false);
         
-        If(SelectedFolder = ReadyForProcessing, ChangeXmlStatus.Run(SelectedFile, SelectedFolder, InProgress));
-        
+        If(SelectedFolder = ReadyForProcessing, ChangeXmlStatus.Run(SelectedFile, SelectedFolder, InProgress); Set(SelectedFolder, InProgress));
         UpdateContext({wizardStep:1});
 
     NalogZaProdajuScreenContainer As groupContainer.verticalAutoLayoutContainer:
